; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_bisect--helper.c_log_commit.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_bisect--helper.c_log_commit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i8* }
%struct.commit = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.pretty_print_context = type { i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 8
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"# %s: [%s] %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i8*, %struct.commit*)* @log_commit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @log_commit(i32* %0, i8* %1, i8* %2, %struct.commit* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.commit*, align 8
  %9 = alloca %struct.pretty_print_context, align 4
  %10 = alloca %struct.strbuf, align 8
  %11 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store %struct.commit* %3, %struct.commit** %8, align 8
  %12 = bitcast %struct.pretty_print_context* %9 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %12, i8 0, i64 4, i1 false)
  %13 = bitcast %struct.strbuf* %10 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %13, i8* align 8 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 8, i1 false)
  %14 = load i8*, i8** %6, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = call i8* @xstrfmt(i8* %14, i8* %15)
  store i8* %16, i8** %11, align 8
  %17 = load %struct.commit*, %struct.commit** %8, align 8
  %18 = call i32 @format_commit_message(%struct.commit* %17, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), %struct.strbuf* %10, %struct.pretty_print_context* %9)
  %19 = load i32*, i32** %5, align 8
  %20 = load i8*, i8** %11, align 8
  %21 = load %struct.commit*, %struct.commit** %8, align 8
  %22 = getelementptr inbounds %struct.commit, %struct.commit* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = call i8* @oid_to_hex(i32* %23)
  %25 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %10, i32 0, i32 0
  %26 = load i8*, i8** %25, align 8
  %27 = call i32 @fprintf(i32* %19, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* %20, i8* %24, i8* %26)
  %28 = call i32 @strbuf_release(%struct.strbuf* %10)
  %29 = load i8*, i8** %11, align 8
  %30 = call i32 @free(i8* %29)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i8* @xstrfmt(i8*, i8*) #2

declare dso_local i32 @format_commit_message(%struct.commit*, i8*, %struct.strbuf*, %struct.pretty_print_context*) #2

declare dso_local i32 @fprintf(i32*, i8*, i8*, i8*, i8*) #2

declare dso_local i8* @oid_to_hex(i32*) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2

declare dso_local i32 @free(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
